--- a/docs/style.css
+++ b/docs/style.css
@@ -181,8 +181,8 @@ td{text-align: center;}
 
 #mainContent { display: grid; grid-template-columns:  1fr; grid-template-rows: 1fr; }
 
-.transmit {background-color: var(--background-color-transmit);}
-.receive  {background-color: var(--background-color-receive);}
+.transmit {background-color: var(--background-color-transmit); padding: 8px;}
+.receive  {background-color: var(--background-color-receive); padding: 8px;}
 
 
 
